# redminerestclient

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: fetch_tartanllama_expected.cmake
src/: apiresources.hpp  redminerestclient_global.h  restclient.cpp  restclient.hpp
src/issues/: issue.cpp  issue.hpp
